Add property for freemarker csrf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
+spring.freemarker.expose-request-attributes=true
+
 upload.path=/home/username/tmp/sweater
+
